Removed positioning from sidebars to prevent overflow bug

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -62,14 +62,6 @@ body > [class*="container"] {
 	background-size: contain;
 }
 
-#sidebar-left,
-#sidebar-right {
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-
 .footer-widget:not(:last-child) {
 	width: fit-content;
 	border-right: 0.5px solid #000000;
